k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftista-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /catalogue/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalogue
            port:
              number: 5000
      - path: /recommendation/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: recommendation
            port:
              number: 8080
      - path: /voting/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: voting
            port:
              number: 8080
